profesor, crear alumnos, modificar usuarios2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.profiles.active=local
 
 server.port=8091
 spring.thymeleaf.cache=false
+
+usuario.perfil.profesor=0
+usuario.perfil.empresa=1
